--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
 
 <body>
   <cyber-card></cyber-card>
-
+  
   <script type="module" src="./src/cyber-card.js"></script>
 </body>
-
+<script>
+  document.querySelector('#dup').addEventListener('click', (e) => {
+  
+  let p = document.getElementById("card");
+  let d = p.cloneNode(true);
+  document.body.appendChild(d);
+    });
+  </script>
 </html>
